# forms-eds-mcp

./: .env  .gitignore  README.md
mcp/: Dockerfile  docker-compose.yml  pyproject.toml
mcp/src/forms_edge_delivery_mcp/: __init__.py  config.py  server.py
mcp/src/forms_edge_delivery_mcp/managers/: __init__.py  css_selectors_manager.py  custom_component_manager.py  dropdown_manager.py  error_message_manager.py  field_structure_manager.py  file_attachment_manager.py  layout_manager.py  panel_container_manager.py  radio_checkbox_manager.py  repeatable_panel_manager.py  shared_utils.py  system_info_manager.py
mcp/src/forms_edge_delivery_mcp/prompts/: __init__.py  prompt_registry.py
mcp/src/forms_edge_delivery_mcp/resources/: __init__.py  system.py
mcp/src/forms_edge_delivery_mcp/tools/: __init__.py  css_selectors_tools.py  custom_component_tools.py  dropdown_tools.py  error_message_tools.py  field_structure_tools.py  file_attachment_tools.py  layout_tools.py  panel_container_tools.py  radio_checkbox_tools.py  repeatable_panel_tools.py  system_info_tools.py
nodejs-mcp-client/: .npmrc  package-lock.json  package.json
nodejs-mcp-client/src/: config.js  http-client.js  prompts.js  resources.js  server.js  test.js  tools.js
